Add the phased_proximal_variants_vcf file input to the API
